fix: add more white space on modal bottom

--- a/Modal 1/style.css
+++ b/Modal 1/style.css
@@ -32,7 +32,7 @@ a {
     width: 90%;
     max-width: 450px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px 20px 70px;
 }
 
 .modal-icons_cont {
@@ -52,17 +52,21 @@ a {
 
 .modal-content_cont {
     width: 80%;
-    /* background: #0874; */
     margin: 0 auto;
     padding: 20px 0;
+    padding: 0 15px;
 }
 
 .modal-content_cont p {
     font-size: .85rem;
 }
 
+.modal-content_cont h2 {
+    font-size: 1.3rem;
+}
+
 .modal-content_cont h3 {
-    font-size: 1.1rem;
+    font-size: .9rem;
     margin: 30px 0 8px;
 }
 
@@ -78,8 +82,9 @@ input {
 }
 
 .modal-content_cont .btn {
+    border-radius: 4px;
     display: inline-block;
-    padding: .6em 2em;
+    padding: .8em 2.5em;
     text-align: center;
     font-weight: bold;
 }
@@ -87,7 +92,6 @@ input {
 .modal-content_cont .btn-continue {
     background: #F96260;
     color: #fff;
-    margin-right: 10px;
 }
 
 .modal-content_cont .btn-cancel {
